conset box alignment fix

--- a/app/cdn/scss/_base.scss
+++ b/app/cdn/scss/_base.scss
@@ -165,3 +165,9 @@ main {
 .score-block {
     min-width: 150px;
 }
+
+//consent button issue
+
+.consent-text{
+    max-width: calc(100% - 375px);
+}
